fixed transparency and added dark mode

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html,
 body,
 .wrapper {
+  position:relative;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -15,9 +16,15 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: white
+  background-color: #d9d9d9;
+  position:relative;
 }
 
+.darkbtn{
+  position: absolute;
+  right:10px;
+  top:5px;
+}
 .wrapper {
   padding-top: 30px;
   padding-left: 20px;
@@ -70,7 +77,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #d9d9d9;
   height: 2px;
 }
 
@@ -78,6 +85,7 @@ header {
   content: " ";
   display: block;
   clear: both;
+  background-color: #d9d9d9;
 }
 
 .btn {
@@ -157,7 +165,8 @@ button[disabled] {
   min-width: 200px;
   height: 200px;
   background-size: cover;
-  border: none
+  border: none;
+  background-color: #d9d9d9;
 }
 
 .wingsBTN {
@@ -166,7 +175,8 @@ button[disabled] {
   width: 20%;
   height: 200px;
   background-size: cover;
-  border: none
+  border: none;
+  background-color:#d9d9d9 ;
 }
 
 .masksBTN {
@@ -175,7 +185,8 @@ button[disabled] {
   height: 200px;
   min-width: 200px;
   background-size: cover;
-  border: none
+  border: none;
+  background-color: #d9d9d9;
 }
 
 .bladesTheme{
@@ -190,5 +201,15 @@ button[disabled] {
 
 .masksTheme{
   background-color: hsl(360, 91%, 36%);;
+  color: white;
+}
+
+.dark-body{
+  background-color: #424242;
+}
+
+.dark-card{
+  background-color: #b1b1b1;
+  border-color: #e7e9eb;
   color: white;
 }
